[project]
name = "gepics"
description = "GObject Wrapper for PyEPICS PV"
authors = [
    {name = "Michel Fodje", email = "michel.fodje@lightsource.ca"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pyepics",
    "pygobject",
    "numpy"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/michel4j/gepics"
Issues = "https://github.com/michel4j/gepics/issues"

[tool.poetry]
packages = [
    { include = "gepics.py" },
]
version = "0.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "{base}.{revision}{distance}"
